--- a/custom-popup/src/popup/PopupStyles.css
+++ b/custom-popup/src/popup/PopupStyles.css
@@ -1,9 +1,10 @@
 section.popupContainer {
+  top: 0;
+  left: 0;
   position: fixed;
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: rows;
   justify-content: space-around;
   z-index: 100;
   padding: 5px 5px;
