Added global styles

--- a/whatsapp/src/styles/globals.css
+++ b/whatsapp/src/styles/globals.css
@@ -3,20 +3,24 @@
   --app-background-stripe: #00a884;
   --app-background: #eae6df;
   --app-background-deeper: #d1d7db;
-  --shadow-rgb: 11,20,26;
+  --shadow-rgb: 11, 20, 26;
   font-size: 10px;
 }
 
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;;
+  padding: 0;
 }
 
 body {
   background-color: var(--app-background);
-  background-image: linear-gradient(180deg,var(--app-background),var(--app-background-deeper));
+  background-image: linear-gradient(180deg, var(--app-background), var(--app-background-deeper));
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -24,4 +28,3 @@ body {
     color-scheme: dark;
   }
 }
-
