--- a/BookMyBooks/php/static/css/global.css
+++ b/BookMyBooks/php/static/css/global.css
@@ -48,6 +48,10 @@ body {
   border-bottom: solid thin var(--background-gray-bg);
 }
 
+.weight-normal {
+  font-weight: 400;
+}
+
 .main {
   padding: 1rem;
   min-height: 51.5rem;
@@ -74,9 +78,13 @@ body {
 
 .heading {
   font-weight: 400;
-  font-size: 2.5rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
   text-transform: capitalize;
+}
+
+.sub-heading {
+  font-weight: 400;
+  margin-bottom: 1.5rem;
 }
 
 .table {
