--- a/BookMyBooks/php/static/css/global.css
+++ b/BookMyBooks/php/static/css/global.css
@@ -27,6 +27,7 @@
 * {
   padding: 0;
   margin: 0;
+  font-family: "Rubik";
 }
 
 body {
@@ -121,14 +122,28 @@ body {
   border: solid thin var(--background-gray);
 }
 
-.table tbody tr:nth-child(odd) {
+.table tbody tr {
+  background-color: var(--background-white-smoke);
+}
+
+/* .table tbody tr:nth-child(odd) {
   background-color: var(--background-white-smoke);
 }
 
 .table tbody tr:nth-child(even) {
   background-color: rgba(0, 0, 0, .1);
-}
+} */
 
 .table .edit-link {
   text-decoration: none;
+}
+
+.dialog {
+  left: 50%;
+  top: 50%;
+  width: 300px;
+  padding: 1.2rem;
+  font-size: 1.2rem;
+  transform: translate(-50%, -50%);
+  box-sizing: border-box;
 }
