Updates and file changes

--- a/BookMyBooks/php/static/css/global.css
+++ b/BookMyBooks/php/static/css/global.css
@@ -28,6 +28,11 @@
   padding: 0;
   margin: 0;
   font-family: "Rubik";
+  font-weight: 300;
+}
+
+h1, h2, h3, h4, h5, strong, .table thead th {
+  font-weight: 400 !important;
 }
 
 body {
